@@ -11,6 +11,7 @@
   * {XML,HTML}::DocumentFragment.{new,parse} no longer strip leading and trailing whitespace. #319
   * XML::Node#{add_child,add_previous_sibling,add_next_sibling,replace} return a NodeSet when passed a string.
   * Unclosed tags parsed more robustly in fragments. #315
+  * XML::Node#{replace,add_previous_sibling,add_next_sibling} edge cases fixed related to libxml's text node merging. #308
 
 === 1.4.3 / 2010/07/28
 
